lang/tests/compile_fail/account_reference_field.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/account_reference_field.rs:7:9
  |
7 |     pub signer: &'account mut Signer,
  |         ^^^^^^ expected `&mut Signer`, found `Signer`
  |
help: consider mutably borrowing here
  |
7 |     pub signer: &mut signer: &'account mut Signer,
  |         ++++++++++++
